@@ -119,6 +119,7 @@
                         <string>my_work_time_annotation_line_quantity</string>
                         <string>my_work_time_annotation_line_quantity_unit</string>
                         <string>my_variation_settings_category_list</string>
+                        <string>my_version</string>
                         <string>my_translated_validation_state_title</string>
                       </list>
                     </value>
