@@ -59,17 +59,7 @@ request = context.REQUEST\n
 # display only title line instead of description\n
 use_line_title =  request.get(\'use_line_title\', 0)\n
 \n
-model = context.getSpecialiseValue()\n
-def getPropertyFromModel(model, property_name):\n
-  """Get a property from the paysheet model, or from a specialised model.\n
-  """\n
-  v = model.getProperty(property_name)\n
-  if v:\n
-    return v\n
-  for specialised_model in model.getSpecialiseValueList():\n
-    v = getPropertyFromModel(specialised_model, property_name)\n
-    if v:\n
-      return v\n
+model = context.getSpecialiseValue().getEffectiveModel(context)\n
 \n
 def getFieldAsString(field):\n
   return \', \'.join(getFieldAsLineList(field))\n
@@ -385,7 +375,7 @@ data_dict = {\n
 \n
   \'total_price_novat\': total_price,\n
   \'description\': getFieldAsLineList(context.getDescription() or\n
-                                    getPropertyFromModel(model, \'description\') or \'\'),\n
+                                    model.getModelIneritanceEffectiveProperty(context, \'description\') or \'\'),\n
   \'specialise_title\': context.getProperty(\'specialise_title\',\'\'),\n
 \n
   \'line_list\': line_list,\n
@@ -434,7 +424,6 @@ return unicodeDict(data_dict)\n
                             <string>request</string>
                             <string>use_line_title</string>
                             <string>model</string>
-                            <string>getPropertyFromModel</string>
                             <string>getFieldAsLineList</string>
                             <string>getFieldAsString</string>
                             <string>getProductAndLineDesc</string>
